# my-arithmetic-faizandier

./: .gitignore  .gitlab-ci.yml  LICENSE.txt  README.md  pyproject.toml
src/my_arithmetic_faizandier/: __about__.py  __init__.py
tests/: __init__.py  test_gcd.py
