[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-arithmetic-faizandier"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "tony", email = "anthony.faizandier@etu.uca.fr" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/tony/my-arithmetic-faizandier#readme"
Issues = "https://github.com/tony/my-arithmetic-faizandier/issues"
Source = "https://github.com/tony/my-arithmetic-faizandier"

[tool.hatch.version]
path = "src/my_arithmetic_faizandier/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/my_arithmetic_faizandier tests}"

[tool.coverage.run]
source_pkgs = ["my_arithmetic_faizandier", "tests"]
branch = true
parallel = true
omit = [
  "src/my_arithmetic_faizandier/__about__.py",
]

[tool.coverage.paths]
my_arithmetic_faizandier = ["src/my_arithmetic_faizandier", "*/my-arithmetic-faizandier/src/my_arithmetic_faizandier"]
tests = ["tests", "*/my-arithmetic-faizandier/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
